--- a/task itech.html
+++ b/task itech.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page2</title>
     <link rel="stylesheet" href="./test.css">
+    <link rel="shortcut icon" href="http://demo.snstheme.com/html/simen/images/favicon.ico" type="image/x-icon">
   <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 <body>
